# ocr

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example.env  launch_app.bat  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-ci.yaml
docling_endpoint/: endpoint.py
examples/: run_ocr.py  webservice.py
notebook/: exp.ipynb
src/: app.py  extractor.py  loader.py  ocr.py  orchestrator.py  start_services.sh  ui.py
