[project]
name = "ocr"
version = "0.1.0"
description = "OCR web service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.37.0",
    "dspy==2.6.19",
    "fire>=0.7.0",
    "litserve>=0.2.11",
    "llama-index",
    "llama-index-llms-google-genai>=0.2.1",
    "llama-index-multi-modal-llms-ollama>=0.4.0",
    "notebook>=7.4.3",
    "ollama>=0.5.1",
    "pdf2image>=1.17.0",
    "pillow<11.0.0",
    "pip>=25.1.1",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "spyder-kernels==3.0.*",
    "streamlit>=1.46.0",
]
